--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.24.1",
     "firebase": "^4.1.2",
     "lodash": "^4.17.4",
@@ -91,8 +92,8 @@
   "babel": {
     "presets": [
       "react-app",
-       "es2015",
-        "stage-1"
+      "es2015",
+      "stage-1"
     ]
   },
   "eslintConfig": {
